--- a/MainPage.html
+++ b/MainPage.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>ระบบ Group3</title>
 </head>
 <body>
+
 
 </body>
 </html>
