modified:   Account.html

--- a/Account.html
+++ b/Account.html
@@ -5,6 +5,10 @@
     <title>Account</title>
 </head>
 <body>
+<!-- เนื้อหาหลัก -->
+<div class="content">
+   <h1>Account User</h1>
+</div>
 
 </body>
 </html>
