modified:   Account.html 	modified:   AccountStyle.css 	modified:   MainPage.html 	modified:   MainStyle.css

--- a/MainPage.html
+++ b/MainPage.html
@@ -5,7 +5,33 @@
     <title>ระบบ Group3</title>
 </head>
 <body>
+<link rel="stylesheet" type="text/css" href="MainStyle.css">
+<!-- แถบด้านบน -->
+<div class="navbar">
 
+</div>
+
+<!-- แถบด้านซ้าย -->
+<div class="sidebar">
+    <ul>
+        <a href="MainPage.html">เมนูหลัก</a><br>
+        <a href="Account.html">ข้อมูลส่วนตัวผู้ใช้</a><br>
+        <a href="#">แบบฟอร์มยื่นคำร้องขอ</a><br>
+        <ul class="sub-menu">
+            <a href="form.html">คำร้องขอทั่วไป</a><br>
+            <a href="addDrop.html">คำร้องขอเพิ่มถอนรายวิชา</a><br>
+            <a href=".html">เงื่อนไขการเขียนคำร้องที่ถูกต้อง</a><br>
+        </ul>
+        <a href="#">สืบค้นสถานะคำร้องของนักศึกษา</a><br>
+        <a href="#">ประวัติการเขียนคำร้อง</a><br>
+        <a href="#">รายการชำระเงิน</a><br>
+    </ul>
+</div>
+
+<!-- เนื้อหาหลักขวา -->
+<div class="content">
+
+</div>
 
 </body>
 </html>
