modified:   Account.html 	modified:   AccountStyle.css 	modified:   MainPage.html 	pic/banner_file.jpg

--- a/Account.html
+++ b/Account.html
@@ -9,6 +9,7 @@
 
 <!-- แถบด้านบน -->
 <div class="navbar">
+    <img src="banner_file.jpg" >
 
 </div>
 
@@ -17,11 +18,11 @@
     <ul>
         <a href="MainPage.html">เมนูหลัก</a><br>
         <a href="Account.html">ข้อมูลส่วนตัวผู้ใช้</a><br>
+        <a href="https://www.reg.tu.ac.th/th/Picture/AttFile/279893db-4b83-4fbd-a1fb-3b8fc77e6d99">ข้อบังคับมหาวิทยาลัยธรรมศาสตร์</a><br>
         <a href="#">แบบฟอร์มยื่นคำร้องขอ</a><br>
         <ul class="sub-menu">
             <a href="form.html">คำร้องขอทั่วไป</a><br>
             <a href="addDrop.html">คำร้องขอเพิ่มถอนรายวิชา</a><br>
-            <a href=".html">เงื่อนไขการเขียนคำร้องที่ถูกต้อง</a><br>
         </ul>
         <a href="#">สืบค้นสถานะคำร้องของนักศึกษา</a><br>
         <a href="#">ประวัติการเขียนคำร้อง</a><br>
@@ -31,7 +32,10 @@
 
 <!-- เนื้อหาหลักขวา -->
 <div class="content">
-   <h1>Account User</h1>
+   <h1>ข้อมูลส่วนตัวผู้ใช่</h1>
+
+
+
 </div>
 
 </body>
