modified:   Account.html 	modified:   MainPage.html

--- a/Account.html
+++ b/Account.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Account</title>
+    <link rel="icon" href="pic/TU.png" type="image/png">
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="AccountStyle.css">
 
 <!-- แถบด้านบน -->
 <div class="navbar">
-    <img src="banner_file.jpg" >
+    <img src="banner_file.jpg">
+
 
 </div>
 
@@ -32,7 +34,14 @@
 
 <!-- เนื้อหาหลักขวา -->
 <div class="content">
-   <h1>ข้อมูลส่วนตัวผู้ใช่</h1>
+    <input placeholder="UserName"><br>
+    <input placeholder="UserID"><br>
+
+    <div class = "data Account">
+        <h2>Account into</h2>
+
+
+    </div>
 
 
 
