modified:   Account.html
	pic/banner_file.jpg

--- a/Account.html
+++ b/Account.html
@@ -39,13 +39,34 @@
 
     <div class = "data Account">
         <h2>Account into</h2>
+        <hr>
+
+
 
 
     </div>
 
 
-
 </div>
+
+<script>
+    function callJSON(){
+    info = {
+    "status": true,
+    "message": "Success",
+    "type": "student",
+    "username": "5701010101",
+    "tu_status": "สำเร็จการศึกษา",
+    "statusid": "40",
+    "displayname_th": "นักศึกษา ทดสอบ",
+    "displayname_en": "nuksuksa todsob",
+    "email": "email.std@dome.tu.ac.th",
+    "department": "สาขาวิชาการบริหารเทคโนโลยี",
+    "faculty": "วิทยาลัยนวัตกรรม"
+    }
+    return  info;
+  }
+    </script>
 
 </body>
 </html>
