--- a/Account.html
+++ b/Account.html
@@ -10,7 +10,7 @@
 
 <!-- แถบด้านบน -->
 <div class="navbar">
-    <img src="banner_file.jpg">
+    <img src ="pic/banner_file.jpg" >
 
 
 </div>
@@ -40,6 +40,8 @@
     <div class = "data Account">
         <h2>Account into</h2>
         <hr>
+        <label>UserName</label><br>
+        <label>UserId</label><br>
 
 
 
