--- a/MainPage.html
+++ b/MainPage.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="MainStyle.css">
 <!-- แถบด้านบน -->
 <div class="navbar">
+    <img src ="pic/banner_file.jpg" >
 
 </div>
 
