modified:   src/main/resources/static/Account.html 	modified:   src/main/resources/static/MainPage.html 	modified:   src/main/resources/static/addDrop.html 	modified:   src/main/resources/static/normalForm.html 	src/main/resources/static/pic/banner_file.jpg

--- a/src/main/resources/static/MainPage.html
+++ b/src/main/resources/static/MainPage.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="pic/TU.png" type="image/png">
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="MainStyle.css">
+<link rel="stylesheet" type="text/css" href="MainPage.css">
 <!-- แถบด้านบน -->
 <div class="navbar">
     <img src ="pic/banner_file.jpg" >
