--- a/src/main/resources/static/normalForm.html
+++ b/src/main/resources/static/normalForm.html
@@ -10,6 +10,8 @@
 
 
 <body>
+
+<template>
 <script>
     function $(name){
         return document.getElementById(name);
@@ -76,7 +78,7 @@
     });
 </script>
 <link rel="stylesheet" type="text/css" href="normalForm.css">
-<form  id="form">
+
     <h1 style="text-align: center;">คำร้องทั่วไป</h1>
     <h2 style="text-align: center;">คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์ ศูนย์รังสิต</h2>
 
@@ -250,6 +252,7 @@
     <button type="submit">ส่งแบบฟอร์ม</button>
 
 
-</form>
+
+</template>
 </body>
 </html>
