--- a/src/main/resources/static/MainPage.html
+++ b/src/main/resources/static/MainPage.html
@@ -7,8 +7,13 @@
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="MainPage.css">
+<div>
 <!-- แถบด้านบน -->
 <div class="navbar">
+    <div class="image-with-text">
+    <img src ="pic/TU3.png"  >
+    </div>
+
     <img src ="pic/banner_file.jpg" >
 
 </div>
@@ -32,6 +37,7 @@
 <!-- เนื้อหาหลักขวา -->
 <div class="content">
 
+</div>
 </div>
 
 </body>
